2014-09-13  Chris Moller  <moller@mollerware.com>

	* menu.c (ps_button_cb): Added a pstat popup.

2014-09-12  Chris Moller  <moller@mollerware.com>

	* resources.c (restore_resources): Save and restore resources.

	* menu.c (ps_toggle_cb): Added a toggle for the pstat line.

	* aplio.c (apl_read_sockid): forced a null-term in call-back.

2014-09-11  Chris Moller  <moller@mollerware.com>

	* options.c (]): Added a --version flag.

	* aplio.c (apl_read_plot_pipe): Added embedded plot capability.

	* apl.c (apl_spawn): Added -f option to pass a script to APL.

2014-09-09  Chris Moller  <moller@mollerware.com>

	* apl.c (apl_spawn): Fixed emacs_arg.

2014-09-08  Chris Moller  <moller@mollerware.com>

	* edit.c (set_status_line): Added a status line showing
	modification and position.

	* txtbuf.c (tagged_insert): Added filter for invalid UTF8 chars.
	(tagged_insert): Added filter for unprintable chars.  Also catch
	the ASCII BEL character and call gdk_beep().  For reasons I don't
	know, it doesn't actually beep.
	(tagged_insert): Little bug fix.

	* aplio.c (apl_read_out): Removed some commented-out diagnostic code.

2014-09-07  Chris Moller  <moller@mollerware.com>

	* edit.c (build_edit_menubar): Renamed "Save File" to "Export File".

	* aplio.c (send_apl): Added convenience wrapper to send().  (Also
	affected fcns in edit.c and menu.c.)

2014-08-31  Chris Moller  <moller@mollerware.com>

	* menu.c (open_object_cb): Put open list inside a scrolled
	window.  Also sorted the list.

2014-08-30  Chris Moller  <moller@mollerware.com>

	* apl.c (make_env): Fixed a g_malloc mug.
	* edit.c (clone_object): Added clone.
	(build_edit_menubar): Added save to file.
	* edit.c (edit_object): Cleaned up a lot of stuff in shared buffer
	stuff. 

2014-08-29  Chris Moller  <moller@mollerware.com>

	* edit.c: Added multi-window stuff.

	* menu.c (open_object_cb): Temporarily remove variable edit.

2014-08-28  Chris Moller  <moller@mollerware.com>
