@@ -1,3 +1,7 @@
+2014-09-14  Chris Moller  <moller@mollerware.com>
+
+	* menu.c (ps_button_cb): Prevent multiple pstat info dialogues.
+
 2014-09-13  Chris Moller  <moller@mollerware.com>
 
 	* menu.c (ps_button_cb): Added a pstat popup.
